--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Welcome to the IoT Dashboard</h1>
+    <div id="root"></div>
+    <script src="../src/index.js" type="module"></script>
 </body>
 </html>
