--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,5 +9,6 @@
     <h1>Welcome to the IoT Dashboard</h1>
     <div id="root"></div>
     <script src="../src/index.js" type="module"></script>
+    <script src="../src/dashboard.jsx" type="module"></script>
 </body>
 </html>
